--- a/MorseCode/app/src/main/res/layout/activity_main.xml
+++ b/MorseCode/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/morse_background"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="70dp"
+        android:src="@drawable/morse_title"
+        tools:ignore="MissingConstraints"
+        android:contentDescription="TODO" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/startMorseButton"
+        android:layout_width="228dp"
+        android:layout_height="60dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/menu_button"
+        android:textColor="#FFFFFF"
+        android:text="Începe"
+        android:layout_marginStart="91dp"
+        android:layout_marginLeft="91dp"
+        android:layout_marginTop="360dp" />
+
+    <Button
+        android:id="@+id/infoMorseButton"
+        android:layout_width="228dp"
+        android:layout_height="60dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/menu_button"
+        android:textColor="#FFFFFF"
+        android:text="Ce este codul morse?"
+        android:layout_marginTop="462dp" />
+
+    <Button
+        android:id="@+id/exitButton"
+        android:layout_width="228dp"
+        android:layout_height="60dp"
+        android:background="@drawable/menu_button"
+        android:text="Închide"
+        android:textColor="#FFFFFF"
+        android:layout_marginStart="91dp"
+        android:layout_marginLeft="91dp"
+        android:layout_marginTop="564dp" />
+
+</RelativeLayout>
