--- a/MorseCode/app/src/main/res/layout-land/activity_main_morse.xml
+++ b/MorseCode/app/src/main/res/layout-land/activity_main_morse.xml
@@ -12,8 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_width="365dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".50"
         android:orientation="vertical"
         android:paddingHorizontal="10dp">
 
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/chango"
             android:gravity="center"
             android:text="Your Text to Encode"
@@ -31,8 +32,8 @@
         <EditText
             android:id="@+id/edit_plain_text"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/text_input_to_encode"
             android:drawableStart="@drawable/ic_text_morse"
             android:drawableLeft="@drawable/ic_text_morse"
@@ -44,8 +45,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".50"
         android:orientation="vertical"
         android:paddingHorizontal="10dp">
         <TextView
@@ -54,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/chango"
             android:text="Your Morse Code"
             android:textSize="36sp" />
@@ -62,8 +64,8 @@
         <TextView
             android:id="@+id/morse_code_resulted"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
             android:textSize="25sp"
             android:textColor="@color/white"
@@ -82,7 +84,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:layout_marginTop="40dp" >
+        android:layout_marginTop="30dp" >
         <Button
             android:id="@+id/flash_code"
             android:layout_width="wrap_content"
