--- a/MorseCode/app/src/main/res/layout/activity_main.xml
+++ b/MorseCode/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/menu_button"
         android:textColor="#FFFFFF"
-        android:text="Începe"
+        android:text="Start"
         android:layout_marginStart="91dp"
         android:layout_marginLeft="91dp"
         android:layout_marginTop="380dp" />
@@ -36,7 +36,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/menu_button"
         android:textColor="#FFFFFF"
-        android:text="Ce este codul morse?"
+        android:text="What is Morse Code?"
         android:layout_marginTop="482dp" />
 
     <Button
@@ -45,7 +45,7 @@
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/menu_button"
-        android:text="Închide"
+        android:text="Exit"
         android:textColor="#FFFFFF"
         android:layout_marginTop="584dp" />
 
