--- a/MorseCode/app/src/main/res/layout/activity_main.xml
+++ b/MorseCode/app/src/main/res/layout/activity_main.xml
@@ -18,25 +18,25 @@
         android:contentDescription="TODO" />
 
     <Button
-        android:id="@+id/startMorseButton"
+        android:id="@+id/encryptMorseButton"
         android:layout_width="228dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/menu_button"
         android:textColor="#FFFFFF"
-        android:text="Start"
+        android:text="Ecnrypt"
         android:layout_marginStart="91dp"
         android:layout_marginLeft="91dp"
         android:layout_marginTop="380dp" />
 
     <Button
-        android:id="@+id/infoMorseButton"
+        android:id="@+id/decryptMorseButton"
         android:layout_width="228dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/menu_button"
         android:textColor="#FFFFFF"
-        android:text="What is Morse Code?"
+        android:text="Decrypt"
         android:layout_marginTop="482dp" />
 
     <Button
