--- a/MorseCode/app/src/main/res/layout/activity_main_morse.xml
+++ b/MorseCode/app/src/main/res/layout/activity_main_morse.xml
@@ -9,8 +9,9 @@
     android:paddingHorizontal="20dp"
     tools:context=".MainMorseActivity">
 
+
     <TextView
-        android:id="@+id/your_morse_code"
+        android:id="@+id/your_plain_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
